Refactoring: took out header + styles from html files

--- a/webapp/templates/books.html
+++ b/webapp/templates/books.html
@@ -1,118 +1,7 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document!</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@600&family=Open+Sans:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href=" {{ url_for('static', filename='css/style.css') }} "
-    />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header-wrapper">
-        <div class="menu">
-          <a href="../" class="menu-logo">DeveloperBooks</a>
-          <!-- /.logo -->
-          <button class="menu-button menu-button--mobile--hidden">
-            <span class="menu-button__line"></span>
-            <span class="menu-button__line"></span>
-            <span class="menu-button__line"></span>
-          </button>
-        </div>
-        <!-- /.logo-menu -->
-        <div class="nav nav--mobile--hidden">
-          <div class="nav-container">
-            <nav class="nav-wrapper">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a href="#" class="nav__link" data-category="level"
-                    >Уровень</a
-                  >
-                  <ul class="dropdown-menu" data-category="level">
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Начинающим</a>
-                    </li>
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Опытным</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link" data-category="language"
-                    >Язык</a
-                  >
-                  <ul class="dropdown-menu" data-category="language">
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Python</a>
-                    </li>
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">JavaScript</a>
-                    </li>
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Пример</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link" data-category="theme"
-                    >Направление</a
-                  >
-                  <ul class="dropdown-menu" data-category="theme">
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Синтаксис</a>
-                    </li>
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Вэб-разработка</a>
-                    </li>
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Пример</a>
-                    </li>
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Пример</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="nav__item">
-                  <a href="#" class="nav__link" data-category="publisher"
-                    >Издательство</a
-                  >
-                  <ul class="dropdown-menu" data-category="publisher">
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Питер</a>
-                    </li>
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Пример</a>
-                    </li>
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Пример</a>
-                    </li>
-                    <li class="dropdown-menu__item">
-                      <a href="#" class="dropdown-menu__link">Пример</a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-              <!-- /.nav__list -->
-            </nav>
-            <!-- /.nav-wrapper -->
-            <button class="button-login">Войти</button>
-          </div>
-          <!-- /.nav-container -->
-        </div>
-        <!-- /.nav -->
-      </div>
-      <!-- /.header-wrapper -->
-    </header>
-    <!-- /.header -->
-
-    <section class="books">
+{% include "blocks/base.html" %}
+{% block body %}
+  {% include "blocks/header.html" %}
+  <section class="books">
       <div class="container">
         {% include "blocks/filter.html" %}
 
@@ -162,8 +51,4 @@
       <!-- /.container -->
     </section>
     <!-- /.books -->
-
-    <script src=" {{ url_for('static', filename='js/jquery-3.6.0.min.js') }} "></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-  </body>
-</html>
+{% endblock %}
