--- a/webapp/templates/main_page.html
+++ b/webapp/templates/main_page.html
@@ -1,4 +1,2 @@
-{% extends "blocks/base.html" %}
-{% block body %}
-  {% include "blocks/header.html" %}
-{% endblock %}
+{% extends "blocks/base.html" %} {% block body %} {% include
+"blocks/header.html" %} {% endblock %}
