Refactoring: delete if conditions for lvl, publishers, language

--- a/webapp/templates/blocks/header.html
+++ b/webapp/templates/blocks/header.html
@@ -1,7 +1,9 @@
 <header class="header">
   <div class="header-wrapper">
     <div class="menu">
-      <a href="{{ url_for('index', _external=True) }}" class="menu-logo">DeveloperBooks</a>
+      <a href="{{ url_for('index', _external=True) }}" class="menu-logo"
+        >DeveloperBooks</a
+      >
       <!-- /.logo -->
       <button class="menu-button menu-button--mobile--hidden">
         <span class="menu-button__line"></span>
@@ -17,48 +19,66 @@
             <li class="nav__item">
               <span class="nav__link" data-category="level">Уровень</span>
               <ul class="dropdown-menu" data-category="level">
-                {% set skills_list = ['Всем', 'Детям', 'Начинающим', 'Опытным'] %}
-                {% for skill in skills_list %}
-                  <li class="dropdown-menu__item">
-                  {% if skill == 'Всем' %} {% set skill_link = '' %} {% else %} {% set skill_link = skill %} {% endif %}
-                  <a href="{{ url_for('books', _external=True, skill=skill_link) }}" class="dropdown-menu__link">{{ skill }}</a>
-                  </li>
+                {% set skills = [('Всем', ''), ('Детям', 'Детям'),
+                ('Начинающим', 'Начинающим'), ('Опытным', 'Опытным')] %} {% for
+                skill_name, skill_link in skills %}
+                <li class="dropdown-menu__item">
+                  <a
+                    href="{{ url_for('books', _external=True, skill=skill_link) }}"
+                    class="dropdown-menu__link"
+                    >{{ skill_name }}</a
+                  >
+                </li>
                 {% endfor %}
               </ul>
             </li>
             <li class="nav__item">
               <span class="nav__link" data-category="language">Язык</span>
               <ul class="dropdown-menu" data-category="language">
-                {% set language_list = ['Все', 'Python', 'JavaScript', 'Java'] %}
-                {% for language in language_list %}
-                  <li class="dropdown-menu__item">
-                  {% if language == 'Все' %} {% set language_link = '' %} {% else %} {% set language_link = language %} {% endif %}
-                  <a href="{{ url_for('books', _external=True, language=language_link) }}" class="dropdown-menu__link">{{ language }}</a>
-                  </li>
+                {% set languages = [('Все', ''), ('Python', 'Python'),
+                ('JavaScript', 'JavaScript'), ('Java', 'Java')] %} {% for
+                language_name, language_link in languages %}
+                <li class="dropdown-menu__item">
+                  <a
+                    href="{{ url_for('books', _external=True, language=language_link) }}"
+                    class="dropdown-menu__link"
+                    >{{ language_name }}</a
+                  >
+                </li>
                 {% endfor %}
               </ul>
             </li>
             <li class="nav__item">
               <span class="nav__link" data-category="theme">Направление</span>
               <ul class="dropdown-menu" data-category="theme">
-                {% set theme_list = ['Все'] %}
-                {% for theme in theme_list %}
-                  <li class="dropdown-menu__item">
-                  {% if theme == 'Все' %} {% set theme_link = '' %} {% else %} {% set theme_link = theme %} {% endif %}
-                  <a href="{{ url_for('books', _external=True, theme=theme_link) }}" class="dropdown-menu__link">{{ theme }}</a>
-                  </li>
+                {% set theme_list = ['Все'] %} {% for theme in theme_list %}
+                <li class="dropdown-menu__item">
+                  {% if theme == 'Все' %} {% set theme_link = '' %} {% else %}
+                  {% set theme_link = theme %} {% endif %}
+                  <a
+                    href="{{ url_for('books', _external=True, theme=theme_link) }}"
+                    class="dropdown-menu__link"
+                    >{{ theme }}</a
+                  >
+                </li>
                 {% endfor %}
               </ul>
             </li>
             <li class="nav__item">
-              <span class="nav__link" data-category="publisher">Издательство</span>
+              <span class="nav__link" data-category="publisher"
+                >Издательство</span
+              >
               <ul class="dropdown-menu" data-category="publisher">
-                {% set publisher_list = ['Все', 'Питер', 'Тест1', '12'] %}
-                {% for publisher in publisher_list %}
-                  <li class="dropdown-menu__item">
-                  {% if publisher == 'Все' %} {% set publisher_link = '' %} {% else %} {% set publisher_link = publisher %} {% endif %}
-                  <a href="{{ url_for('books', _external=True, publisher=publisher_link) }}" class="dropdown-menu__link">{{ publisher }}</a>
-                  </li>
+                {% set publishers = [('Все', ''), ('Питер', 'Питер'), ('Тест1',
+                'Тест1'), ('12', '12')] %} {% for publisher_name, publisher_link
+                in publishers %}
+                <li class="dropdown-menu__item">
+                  <a
+                    href="{{ url_for('books', _external=True, publisher=publisher_link) }}"
+                    class="dropdown-menu__link"
+                    >{{ publisher_name }}</a
+                  >
+                </li>
                 {% endfor %}
               </ul>
             </li>
