Add: styles for filter block

--- a/webapp/static/sass/style.sass
+++ b/webapp/static/sass/style.sass
@@ -10,6 +10,9 @@
 // Импорт секции Header
 @import "blocks/_header"
 
+// Импорт блока Фильтр (Filter)
+@import "blocks/_filter"
+
 // Импорт секции Книги (Book)
 @import "blocks/_books"
 
