--- a/webapp/static/sass/_variables.sass
+++ b/webapp/static/sass/_variables.sass
@@ -16,6 +16,8 @@ $beige: #EDD9CE
 // Бежевый (темный)
 $beige-dark: #EDC7B7
 
+$indigo-color: #4B0082
+
 // Open Sans 300, 400
 $paragraph-font: 'Open Sans', sans-serif
 
