--- a/webapp/templates/blocks/filter.html
+++ b/webapp/templates/blocks/filter.html
@@ -3,8 +3,8 @@
     <div class="filters skill-wrapper">
       <h3 class="filter-title">Уровень</h3>
       {% set skills = [('Детям', 'Детям'), ('Начинающим', 'Начинающим'), ('Опытным', 'Опытным')] %}
-      <p>
-        <input
+      <p class="filter-value">
+        <input class="filter-button"
           name="skill"
           type="radio"
           value=""
@@ -21,8 +21,8 @@
         Всем
       </p>
       {% for skill_name, skill_link in skills %}
-        <p>
-          <input name="skill" type="radio" value="{{ skill_link }}" {% if
+        <p class="filter-value">
+          <input class="filter-button" name="skill" type="radio" value="{{ skill_link }}" {% if
           request.args.skill == skill_link %} checked {% endif %}/> {{ skill_name
           }}
         </p>
@@ -34,8 +34,8 @@
       <h3 class="filter-title">Язык</h3>
       {% set languages = [('Python', 'Python'), ('JavaScript',
       'JavaScript'), ('Java', 'Java')] %}
-      <p>
-        <input
+      <p class="filter-value">
+        <input class="filter-button"
           name="language"
           type="radio"
           value=""
@@ -52,8 +52,8 @@
         Все
       </p>
       {% for language_name, language_link in languages %}
-        <p>
-          <input name="language" type="radio" value="{{ language_link }}" {% if
+        <p class="filter-value">
+          <input class="filter-button" name="language" type="radio" value="{{ language_link }}" {% if
           request.args.language == language_link %} checked {% endif %}/> {{
           language_name }}
         </p>
@@ -61,10 +61,45 @@
     </div>
     <!-- /.filters .language-wrapper -->
 
+    <div class="filters theme-wrapper">
+      <h3 class="filter-title">Направление</h3>
+      {% set themes = ['DevOps', 'Алгоритмы и структуры данных',
+                'Базы данных', 'Высоконагруженные приложения',
+                'Вэб-приложения', 'Графические интерфейсы', 'Компьютерная безопасность',
+                'Компьютерное зрение', 'Машинное обучение',
+                'Обработка естественного языка', 'Парсинг', 'Работа с микроконтроллерами', 'Разработка игр',
+                'Сетевое программирование', 'Тестирование'] %}
+      <p class="filter-value">
+        <input class="filter-button"
+          name="theme"
+          type="radio"
+          value=""
+          {%
+          if
+          not
+          request.args.theme
+          %}
+          checked
+          {%
+          endif
+          %}
+        />
+        Все
+      </p>
+      {% for theme in themes %}
+        <p class="filter-value">
+          <input class="filter-button" name="theme" type="radio" value="{{ theme }}" {% if
+          request.args.theme == theme %} checked {% endif %}/> {{
+          theme }}
+        </p>
+      {% endfor %}
+    </div>
+    <!-- /.filters .language-wrapper -->
+
     <div class="filters publisher-wrapper">
       <h3 class="filter-title">Издательство</h3>
-      <p>
-        <input
+      <p class="filter-value">
+        <input class="filter-button"
           name="publisher"
           type="radio"
           value=""
@@ -81,8 +116,8 @@
         Все
       </p>
       {% for publisher in publishers %}
-      <p>
-        <input name="publisher" type="radio" value="{{ publisher.title }}" {% if
+      <p class="filter-value">
+        <input class="filter-button" name="publisher" type="radio" value="{{ publisher.title }}" {% if
         request.args.publisher == publisher.title|string %} checked {% endif
         %}/> {{ publisher.title }}
       </p>
@@ -92,8 +127,8 @@
 
     <div class="filters year-wrapper">
       <h3 class="filter-title">Год</h3>
-      <p>
-        <input
+      <p class="filter-value">
+        <input class="filter-button"
           name="year"
           type="radio"
           value=""
@@ -110,8 +145,8 @@
         За всё время
       </p>
       {% for year in years_list %}
-      <p>
-        <input name="year" type="radio" value="{{ year.year }}" {% if
+      <p class="filter-value">
+        <input class="filter-button" name="year" type="radio" value="{{ year.year }}" {% if
         request.args.year == year.year|string %} checked {% endif %}/> {{
         year.year }}
       </p>
