--- a/webapp/templates/blocks/header.html
+++ b/webapp/templates/blocks/header.html
@@ -51,7 +51,13 @@
             <li class="nav__item">
               <span class="nav__link" data-category="theme">Направление</span>
               <ul class="dropdown-menu" data-category="theme">
-                {% set theme_list = ['Все'] %} {% for theme in theme_list %}
+                {% set theme_list = ['Все', 'DevOps', 'Алгоритмы и структуры данных',
+                'Базы данных', 'Высоконагруженные приложения',
+                'Вэб-приложения', 'Графические интерфейсы', 'Компьютерная безопасность',
+                'Компьютерное зрение', 'Машинное обучение',
+                'Обработка естественного языка', 'Парсинг', 'Работа с микроконтроллерами', 'Разработка игр',
+                'Сетевое программирование', 'Тестирование'] %} {% for theme in theme_list
+                %}
                 <li class="dropdown-menu__item">
                   {% if theme == 'Все' %} {% set theme_link = '' %} {% else %}
                   {% set theme_link = theme %} {% endif %}
