Add: Main page content

--- a/webapp/static/sass/_variables.sass
+++ b/webapp/static/sass/_variables.sass
@@ -18,6 +18,8 @@ $beige-dark: #EDC7B7
 
 $indigo-color: #4B0082
 
+$orange-color: #fcac5e
+
 // Open Sans 300, 400
 $paragraph-font: 'Open Sans', sans-serif
 
