--- a/webapp/static/sass/style.sass
+++ b/webapp/static/sass/style.sass
@@ -10,6 +10,9 @@
 // Импорт секции Header
 @import "blocks/_header"
 
+// Импорт секции Main page
+@import "blocks/_main_page"
+
 // Импорт блока Фильтр (Filter)
 @import "blocks/_filter"
 
