--- a/webapp/templates/blocks/base.html
+++ b/webapp/templates/blocks/base.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document!</title>
+    <title>DeveloperBooks</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@600&family=Open+Sans:wght@300;400&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='img/favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename='img/favicon.ico') }}"
+      type="image/x-icon"
     />
     <link
       rel="stylesheet"
@@ -15,8 +25,8 @@
     />
   </head>
   <body>
-    {% block body %}
-    {% endblock %}
+    <!-- prettier-ignore -->
+    {% block body %} {% endblock %}
     <script src=" {{ url_for('static', filename='js/jquery-3.6.0.min.js') }} "></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
   </body>
