Add: animate for links on main page

--- a/webapp/static/sass/_hovers.sass
+++ b/webapp/static/sass/_hovers.sass
@@ -29,3 +29,11 @@
           color: $blue-color
         &:active 
           color: $ruby-color
+
+  .block
+    &-list
+      &__link
+        &:hover
+          color: $blue-color
+        &:active 
+          color: $ruby-color
