Add: footer + svg images footer + animations footer

--- a/webapp/static/sass/_hovers.sass
+++ b/webapp/static/sass/_hovers.sass
@@ -37,3 +37,12 @@
           color: $blue-color
         &:active 
           color: $ruby-color
+
+  .contacts
+    &-link
+      &:hover
+        color: $blue-color
+        fill: $blue-color
+      &:active 
+        color: $ruby-color
+        fill: $ruby-color
