Add: to-top button

--- a/webapp/static/sass/_hovers.sass
+++ b/webapp/static/sass/_hovers.sass
@@ -46,3 +46,12 @@
       &:active 
         color: $ruby-color
         fill: $ruby-color
+
+  .to
+    &-top
+        &:hover
+          border-color: $blue-color
+          fill: $blue-color
+        &:active 
+          border-color: $blue-color
+          fill: $ruby-color
