--- a/webapp/static/sass/style.sass
+++ b/webapp/static/sass/style.sass
@@ -22,6 +22,9 @@
 // Импорт секции Footer
 @import "blocks/_footer"
 
+// Импорт секции Footer
+@import "blocks/_to_top"
+
 // Импорт Hovers (Анимация при наведении/клике)
 @import "hovers"
 // Media запросы (адаптивная верстка)
