--- a/webapp/templates/main_page.html
+++ b/webapp/templates/main_page.html
@@ -133,3 +133,6 @@
 
 <!-- prettier-ignore -->
 {% include "blocks/footer.html" %}
+
+<!-- prettier-ignore -->
+{% include "blocks/to_top_button.html" %}
